[project]
name = "drug-verification"
version = "0.1.0"
description = "Training and verifying a controler for dispensing antibiotics"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.11.0",
    "mpmath==1.3.0",
    "onnxruntime==1.27.0",
    "onnxscript==0.7.0",
    "pandas==3.0.3",
    "scikit-learn==1.9.0",
    "tensorflow==2.21.0",
"vehicle-lang==0.26.0",
    "tf2onnx==1.17.0",
    "maraboupy==2.0.0",
    "idx2numpy==1.2.3",
    "jupyter==1.1.1",
]

[project.scripts]
pk = "drug_verification.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["drug_verification"]
